--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
       <div class="nameContainer">
         <h2 class="name">I'm John</h2>
       </div>
+      <div class="jobTitleContainer dark">
+        <h2 class="jobTitle">a Web Developer</h2>
+      </div>
+      <div class="jobTitleContainer purple">
+        <h2 class="jobTitle">and Designer</h2>
+      </div>
      </div>
      <!-- PROJECT -->
-     <div class="projects"></div>
+     <div class="projects">
+      <h1 class="projectTitle"></h1>
+     </div>
      <!-- GITHUB -->
      <div class="github"></div>
   </div>
